chore: 환경 변수 샘플 추가

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_BASE_URL=your_base_url
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 NEXT_SUPABASE_SERVICE_ROLE=your_service_role
